[package]
name = "burstq"
version = "0.1.0"
edition = "2021"
description = "A multi-producer, multi-consumer channel that supports sending or receiving multiple values in a single operation."
repository = "https://github.com/tedsta/burstq"
documentation = "https://docs.rs/burstq"
keywords = ["mpsc", "fifo", "channel", "mpmc"]
categories = ["concurrency", "data-structures"]
license = "MIT"
readme = "README.md"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
async-event = "0.1.0"
crossbeam-utils = "0.8"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[dev-dependencies]
core_affinity = "0.8"
criterion = "0.3"
flume = "0.11"
pollster = "*"

[[bench]]
name = "end_to_end"
harness = false

